@@ -807,6 +807,9 @@
         name = "Laurent Birtz"
     [/entry]
     [entry]
++         name = "Łukasz Dobrogowski (nital)"
++     [/entry]
++     [entry]
         name = "Manuel Osório Binelo (manuelb)"
     [/entry]
     [entry]
